--- a/journal.html
+++ b/journal.html
@@ -39,16 +39,17 @@
 				</ul>
 			</div>
 			<hr>
+			<!-- <h2 style="text-align: center;">journal</h2> -->
 			<br>
 			<div class='journalnavbar'>
-				<ul>
-					<!-- <li><a href='keyboards.html'>keyboards</a></li>
-					|
-					<li><a href='videogames.html'>video games</a></li>
+				<ul style="padding: 0px;">
+					<!-- <li><a href='videogames.html'>video games</a></li>
 					| -->
-					<li><a href='consolemods.html'>console mods</a></li>
+					<li><a href='journal/audiothings.html'>audio things</a></li>
 					|
-					<li><a href='audiothings.html'>audio things</a></li>
+					<li><a href='journal/keyboards.html'>computer keyboards</a></li>
+					|
+					<li><a href='journal/consolemods.html'>console mods</a></li>
 				</ul>
 			</div>
 		</div>
