--- a/journal/consolemods.html
+++ b/journal/consolemods.html
@@ -4,9 +4,9 @@
 	<title>console mods</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+	<link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-	<link rel='stylesheet' href='styles.css'>
+	<link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 				[ path: 
 				<a href="/">home</a>
 				/
-				<a href='journal.html'>journal</a>
+				<a href='../journal.html'>journal</a>
 				/
 				<a href="consolemods.html">console mods</a>
 				] 
@@ -32,21 +32,34 @@
 				<ul>
 					<li><a href='/'>home</a></li>
 					|
-					<li><a href='projects.html'>projects</a></li>
+					<li><a href='../projects.html'>projects</a></li>
 					|
-					<li><a href='journal.html'>journal</a></li>
+					<li><a href='../journal.html'>journal</a></li>
 					|
-					<li><a href='contact.html'>contact</a></li>
+					<li><a href='../contact.html'>contact</a></li>
 				</ul>
 			</div>
 			<hr>
 			<br>
-			<h2 style="text-align: center;">gameboy color mod no. 1 (dec 2023)</h2>
+			<h2 style="text-align: center;">console mods</h2>
 			<br>
 			<!-- entry 1 -->
+			<h3 style="text-align: center;">fpgbc (apr 2024)</h3>
 			<div class="flex-container">
 				<div class="leftside">
-					<img src="assets/both_gameboys.jpg" id="borderimg1" style="max-width: 25%; max-height: 100vh; margin: auto;">
+					<img src="../assets/fpgbc-1.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+				</div>
+				<div class="rightside">
+					<p style="font-size: 90%;">
+						test.
+					</p>
+				</div>
+			</div>
+			<!-- entry 2 -->
+			<h3 style="text-align: center;">gameboy color mod no. 1 (dec 2023)</h3>
+			<div class="flex-container">
+				<div class="leftside">
+					<img src="../assets/both_gameboys.jpg" id="borderimg1" style="max-width: 25%; max-height: 100vh; margin: auto;">
 					<br>can you spot the difference between these two?
 					<p style="font-size: 70%;">
 						i mean like obviously yes you can they look incredibly different but that's besides the point.
@@ -55,7 +68,7 @@
 					<br>i'll tell ya, not much.
 					<br>
 					<br>
-					<img src="assets/modded_gameboy.jpg" id="borderimg1" style="max-width: 20%; max-height: 100vh; margin: auto;">
+					<img src="../assets/modded_gameboy.jpg" id="borderimg1" style="max-width: 20%; max-height: 100vh; margin: auto;">
 					<br>but it's cool enough.
 				</div>
 			</div>
