--- a/journal/keyboards.html
+++ b/journal/keyboards.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>audio things</title>
+	<title>keyboards</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+	<link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-	<link rel='stylesheet' href='styles.css'>
+	<link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
 				[ path: 
 				<a href="/">home</a>
 				/
-				<a href='journal.html'>journal</a>
+				<a href='../journal.html'>journal</a>
 				/
-				<a href="audiothings.html">audio things</a>
+				<a href="keyboards.html">keyboards</a>
 				] 
 			</div>
 		</div>
@@ -32,20 +32,19 @@
 				<ul>
 					<li><a href='/'>home</a></li>
 					|
-					<li><a href='projects.html'>projects</a></li>
+					<li><a href='../projects.html'>projects</a></li>
 					|
-					<li><a href='journal.html'>journal</a></li>
+					<li><a href='../journal.html'>journal</a></li>
 					|
-					<li><a href='contact.html'>contact</a></li>
+					<li><a href='../contact.html'>contact</a></li>
 				</ul>
 			</div>
 			<hr>
 			<br>
-			<p style='text-align: center;'>
-				<a href="height-layer.html">height layer comparison (apr 2024)</a>
-				<br>
-				<a href="binauralobjectsfeb24.html">binaural objects (feb 2024)</a>
-			</p>
+			<ul style="padding: 0px;">
+				<li><a href='keyboards/a-return-to-form.html'>a return to form (may 2024)</a></li>
+			</ul>
+			
 		</div>
 	</div>
 	<br>
