--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 					<p style='line-height: 1.0;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='height-layer.html'>height layer comparison (apr 2024)</a></h2>
+					<h2><a href='projects/height-layer.html'>height layer comparison (apr 2024)</a></h2>
 					<p>how much does mic placement <i>really</i> matter?</p>
 					<br>
 					<p style='font-size: 80%;'>recording vierne's <i>arabesque</i> in a cathedral.	
@@ -71,7 +71,7 @@
 					<p style='line-height: 1.0;'><small><i>like a guitar pedal for making all your music good.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='fourierifier.html'>fourierifier (apr 2024)</a></h2>
+					<h2><a href='projects/fourierifier.html'>fourierifier (apr 2024)</a></h2>
 					<p>how i fixed music. permanently.</p>
 					<br>
 					<p style='font-size: 80%;'>a way to make songs less boring.
@@ -91,7 +91,7 @@
 					<p style='line-height: 1.0;'><small><i>making noise music fun for once.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='pkmnmaxmsp.html'>pkmnMaxMSP (mar 2024)</a></h2>
+					<h2><a href='projects/pkmnmaxmsp.html'>pkmnMaxMSP (mar 2024)</a></h2>
 					<p>maximum noise. minimum effort.</p>
 					<br>
 					<p style='font-size: 80%;'>what if playing pokémon gave you a headache?
@@ -111,7 +111,7 @@
 					<p style='line-height: 1.0;'><small><i>so, yes head?</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='binauralobjectsfeb24.html'>binaural objects (feb 2024)</a></h2>
+					<h2><a href='projects/binauralobjectsfeb24.html'>binaural objects (feb 2024)</a></h2>
 					<p>analogue & digital binaural.</p>
 					<br>
 					<p style='font-size: 80%;'>blending binaural recordings with binaural processing.</p>
@@ -129,7 +129,7 @@
 					<p style='line-height: 1.0;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2><a href='cerialv2.html'>cerial ver. 2 (dec 2023)</a></h2>
+					<h2><a href='projects/cerialv2.html'>cerial ver. 2 (dec 2023)</a></h2>
 					<p>fight stick instrument.</p>
 					<br>
 					<p style='font-size: 80%;'>i don't play any fighting games but i like the look and feel of fight sticks.
