--- a/projects/binauralobjectsfeb24.html
+++ b/projects/binauralobjectsfeb24.html
@@ -5,9 +5,9 @@
     <title>binaural objects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+    <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-    <link rel='stylesheet' href='styles.css'>
+    <link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='projects.html'>projects</a>
+                <a href='../projects.html'>projects</a>
                 /
                 <a href="binauralobjectsfeb24.html">binaural objects</a>
                 ]
@@ -32,16 +32,16 @@
                 <ul>
                     <li><a href='/'>home</a></li>
                     |
-                    <li><a href='projects.html'>projects</a></li>
+                    <li><a href='../projects.html'>projects</a></li>
                     |
-                    <li><a href='journal.html'>journal</a></li>
+                    <li><a href='../journal.html'>journal</a></li>
                     |
-                    <li><a href='contact.html'>contact</a></li>
+                    <li><a href='../contact.html'>contact</a></li>
                 </ul>
             </div>
             <hr>
             <!-- begin writing here -->
-            <audio id="danseAudio" src="assets/danse_de_la_chevre_remix.mp3"></audio>
+            <audio id="danseAudio" src="../assets/danse_de_la_chevre_remix.mp3"></audio>
             <h2 style="text-align: center;">binaural objects (feb 2024)</h2>
             <p style="text-align: center;">and the demands involved.</p>
             <div class="flex-container">
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class="rightsidecenter">
-                    <img src="assets/danse-ku100subway.jpg" id="borderimg1" style="max-width: 40%; max-height: 100vh;">
+                    <img src="../assets/danse-ku100subway.jpg" id="borderimg1" style="max-width: 40%; max-height: 100vh;">
                 </div>
             </div>
         </div>
