--- a/projects/fourierifier.html
+++ b/projects/fourierifier.html
@@ -5,9 +5,9 @@
     <title>fourierifier</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+    <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-    <link rel='stylesheet' href='styles.css'>
+    <link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='projects.html'>projects</a>
+                <a href='../projects.html'>projects</a>
                 /
                 <a href="fourierifier.html">fourierifier</a>
                 ]
@@ -32,11 +32,11 @@
                 <ul>
                     <li><a href='/'>home</a></li>
                     |
-                    <li><a href='projects.html'>projects</a></li>
+                    <li><a href='../projects.html'>projects</a></li>
                     |
-                    <li><a href='journal.html'>journal</a></li>
+                    <li><a href='../journal.html'>journal</a></li>
                     |
-                    <li><a href='contact.html'>contact</a></li>
+                    <li><a href='../contact.html'>contact</a></li>
                 </ul>
             </div>
             <hr>
@@ -52,7 +52,7 @@
                     <!-- i think this literally only works because the image is higher res. than the space it's placed - idk what happens on higher res. displays -->
                 </div>
                 <div class="rightside" id="fourierifierRightSide">
-                    <img class="hoverZoomImage" id="fourierifierImage" src="assets/fourierifier_patcher.jpg" style="max-width: 70%; max-height: 100vh; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
+                    <img class="hoverZoomImage" id="fourierifierImage" src="../assets/fourierifier_patcher.jpg" style="max-width: 70%; max-height: 100vh; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
                 </div>
             </div>
         </div>
