--- a/projects/pkmnmaxmsp.html
+++ b/projects/pkmnmaxmsp.html
@@ -5,9 +5,9 @@
     <title>pkmnMaxMSP</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+    <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
     <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-    <link rel='stylesheet' href='styles.css'>
+    <link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 [ path:
                 <a href="/">home</a>
                 /
-                <a href='projects.html'>projects</a>
+                <a href='../projects.html'>projects</a>
                 /
                 <a href="pkmnmaxmsp.html">pkmnMaxMSP</a>
                 ]
@@ -32,11 +32,11 @@
                 <ul>
                     <li><a href='/'>home</a></li>
                     |
-                    <li><a href='projects.html'>projects</a></li>
+                    <li><a href='../projects.html'>projects</a></li>
                     |
-                    <li><a href='journal.html'>journal</a></li>
+                    <li><a href='../journal.html'>journal</a></li>
                     |
-                    <li><a href='contact.html'>contact</a></li>
+                    <li><a href='../contact.html'>contact</a></li>
                 </ul>
             </div>
             <hr>
@@ -50,7 +50,7 @@
                     <br>
                     <iframe id="pkmnVideo" style="float: left; position: relative; top: 15%; left: 2%;" width="448" height="252" src="https://www.youtube-nocookie.com/embed/AFi1Px7UF9E?si=RLHygyfYmIistpI2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <!-- i think this literally only works because the image is higher res. than the space it's placed - idk what happens on higher res. displays -->
-                    <img class="hoverZoomImage" id="pkmnImage" src="assets/pkmnMaxMSP.jpg" style=" float: right; position: relative; max-width: 40%; max-height: 100vh; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
+                    <img class="hoverZoomImage" id="pkmnImage" src="../assets/pkmnMaxMSP.jpg" style=" float: right; position: relative; max-width: 40%; max-height: 100vh; border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;" onmousemove="zoom(event)" onmouseleave="resetZoom(event)">
                 </div>
                 <div class="rightside" style="padding-left: 2%;">
                     <p style="font-size: 65%;">
