--- a/projects/cerialv2.html
+++ b/projects/cerialv2.html
@@ -4,9 +4,9 @@
 	<title>cerial ver. 2</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
+	<link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-	<link rel='stylesheet' href='styles.css'>
+	<link rel='stylesheet' href='../styles.css'>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 				[ path: 
 				<a href="/">home</a>
 				/
-				<a href='journal.html'>projects</a>
+				<a href='../projects.html'>projects</a>
 				/
 				<a href="cerialv2.html">cerial ver. 2</a>
 				] 
@@ -32,11 +32,11 @@
 				<ul>
 					<li><a href='/'>home</a></li>
 					|
-					<li><a href='projects.html'>projects</a></li>
+					<li><a href='../projects.html'>projects</a></li>
 					|
-					<li><a href='journal.html'>journal</a></li>
+					<li><a href='../journal.html'>journal</a></li>
 					|
-					<li><a href='contact.html'>contact</a></li>
+					<li><a href='../contact.html'>contact</a></li>
 				</ul>
 			</div>
 			<hr>			
@@ -46,7 +46,7 @@
 			<!-- entry 1 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial ver2.jpg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial ver2.jpg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 12, 2023.</b></i>
@@ -98,14 +98,14 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_insane-ramblings.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_insane-ramblings.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 			<br>
 			<!-- entry 3 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_testing-cables.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_testing-cables.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 18, 2023.</b></i>
@@ -170,7 +170,7 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="assets/cerial2_first-time-operational.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_first-time-operational.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 		</div>
