--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </body>
 
 <script>
-	const images = ["assets/me2.jpg", "assets/me3.jpg", "assets/me4.jpg"];
+	const images = ["assets/me2.jpg", "assets/me3.jpg", "assets/me4.jpg", "assets/me5.jpg"];
 	document.addEventListener(
 		'DOMContentLoaded', _ => {
 			const randImageIndex = ~~(Math.random() * images.length); document.getElementById('randImg').src = images[randImageIndex];
