--- a/journal.html
+++ b/journal.html
@@ -40,11 +40,13 @@
 			<h2 style="text-align: center;">journal</h2>
 			<br>
 			<div id="borderimg1" class="sidenav">
+				<span style="text-align: center; background-color: gainsboro; display: block;"><b>-2024-</b></span>
 				<a class="active" href="#may2024" id="may2024nav" onclick="navBarActive('may2024nav')">may 2024</a>
 				<a href="#apr2024" id="apr2024nav" onclick="navBarActive('apr2024nav')">apr 2024</a>
-				<a href="#mar2024" id="mar2024nav" onclick="navBarActive('mar2024nav')">mar 2024</a>
+				<!-- <a href="#mar2024" id="mar2024nav" onclick="navBarActive('mar2024nav')">mar 2024</a>
 				<a href="#feb2024" id="feb2024nav" onclick="navBarActive('feb2024nav')">feb 2024</a>
-				<a href="#jan2024" id="jan2024nav" onclick="navBarActive('jan2024nav')">jan 2024</a>
+				<a href="#jan2024" id="jan2024nav" onclick="navBarActive('jan2024nav')">jan 2024</a> -->
+				<span style="text-align: center; background-color: gainsboro; display: block;"><b>-2023-</b></span>
 				<a href="#dec2023" id="dec2023nav" onclick="navBarActive('dec2023nav')">dec 2023</a>
 			</div>
 			<div class="main">
