Update journal.html & 404
- journal.html: updated threshold value
-added 404.html
-fixed broken contact page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<link rel='stylesheet' href='styles.css'>
 </head>
 
-<body style='background-color: black; color: white; background-image: none;'>
+<body style='background-color: black; color: white;'>
 	<div class='content'>
 
 		<div class='header'>
@@ -17,7 +17,7 @@
 				[ path: 
 				<a href="/">home</a>
 				/
-				<a href="contact.html">contact</a>
+				<a href="contact.html">contact?</a>
 				] 
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 					<li><a href='contact.html'>contact</a></li>
 				</ul>
 			</div>
-			<hr>
+			<hr style="color: white;">
 			<br>
 			<p style='text-align: center;'>do not contact me.</p>
 			<br>
@@ -53,3 +53,12 @@
 
 </body>
 </html>
+
+<style>
+	hr:after {
+		background: black;
+	}
+	body:before {
+		background: black no-repeat center center;
+	}
+</style>
