--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class='leftside'>
 					<img id="randImg" src='' />
-					<p style='line-height: 0.25;'>this is a photo of me.</p>
+					<p style='line-height: 0.25;'>this is a photo of <a href="me.html">me</a>.</p>
 				</div>
 
 				<div class='rightside'>
