--- a/me.html
+++ b/me.html
@@ -70,7 +70,7 @@
                     since then, i've focused my interests toward researching psychoacoustics as they relate to immersive audio.
                     <br>
                     <br>outside of audio, i am also:
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; margin-left: 10px;">
                         <li style="display: list-item;">a pokémon enthusiast (and #1 fan of sinnoh)</li> 
                         <li style="display: list-item;">a mediocre hardware designer</li> 
                         <li style="display: list-item;">a slightly better software developer</li>
