--- a/me.html
+++ b/me.html
@@ -46,7 +46,7 @@
                     who are you?
                 </div>
                 <div id="meAnswers" class="rightside" style="margin-left: 5px; font-size: 90%; margin-right: 40vh;">
-                    i am a graduate student in new york studying psychoacoustics.
+                    i am a graduate student in new york studying audio... stuff.
                     my graduate work focuses on methods to improve binaural
                     externalization without the use of individualized head-related
                     transfer functions.
